--- a/rackshift-server/pom.xml
+++ b/rackshift-server/pom.xml
@@ -232,6 +232,13 @@
             <artifactId>tomcat-embed-core</artifactId>
             <version>9.0.39</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.eclipsesource.j2v8</groupId>
+            <artifactId>j2v8_win32_x86_64</artifactId>
+            <version>4.6.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
