--- a/rackshift-server/pom.xml
+++ b/rackshift-server/pom.xml
@@ -216,14 +216,14 @@
             <version>2.3.10</version>
             <exclusions>
                 <exclusion>
-                    <groupId> org.springframework.amqp</groupId>
+                    <groupId>org.springframework.amqp</groupId>
                     <artifactId>spring-amqp</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
 
         <dependency>
-            <groupId> org.springframework.amqp</groupId>
+            <groupId>org.springframework.amqp</groupId>
             <artifactId>spring-amqp</artifactId>
             <version>2.3.10</version>
         </dependency>
@@ -235,12 +235,39 @@
 
         <dependency>
             <groupId>com.eclipsesource.j2v8</groupId>
-            <artifactId>j2v8_win32_x86_64</artifactId>
-            <version>4.6.0</version>
+            <artifactId>j2v8_linux_x86_64</artifactId>
+            <version>4.8.0</version>
         </dependency>
 
     </dependencies>
+    <profiles>
 
+        <profile>
+            <activation>
+                <os>
+                    <name>windows</name>
+                    <version>10</version>
+                </os>
+            </activation>
+            <id>windows</id>
+            <properties>
+                <j2v8_id>j2v8_win32_x86_64</j2v8_id>
+                <j2v8_version>4.6.0</j2v8_version>
+            </properties>
+        </profile>
+        <profile>
+            <activation>
+                <os>
+                    <name>linux</name>
+                </os>
+            </activation>
+            <id>linux</id>
+            <properties>
+                <j2v8_id>j2v8_linux_x86_64</j2v8_id>
+                <j2v8_version>4.8.0</j2v8_version>
+            </properties>
+        </profile>
+    </profiles>
     <build>
         <resources>
             <resource>
