--- a/rackshift-dhcp-proxy/pom.xml
+++ b/rackshift-dhcp-proxy/pom.xml
@@ -71,6 +71,12 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.26</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>3.5.7</version>
+        </dependency>
     </dependencies>
 
     <build>
